tests/transpiler/x/hs/map_literal_dynamic.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/map_literal_dynamic.hs:14:5: error:
    • Couldn't match expected type: IO ()
                  with actual type: [Char]
    • In a stmt of a 'do' block:
        putStrLn show (m Map.! "a") ++ " " ++ show (m Map.! "b")
      In the expression:
        do putStrLn show (m Map.! "a") ++ " " ++ show (m Map.! "b")
      In an equation for ‘main’:
          main = do putStrLn show (m Map.! "a") ++ " " ++ show (m Map.! "b")
   |
14 |     putStrLn show (m Map.! "a") ++ " " ++ show (m Map.! "b")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/transpiler/x/hs/map_literal_dynamic.hs:14:14: error:
    • Couldn't match type: a0 -> String
                     with: [Char]
      Expected: String
        Actual: a0 -> String
    • Probable cause: ‘show’ is applied to too few arguments
      In the first argument of ‘putStrLn’, namely ‘show’
      In the first argument of ‘(++)’, namely
        ‘putStrLn show (m Map.! "a")’
      In a stmt of a 'do' block:
        putStrLn show (m Map.! "a") ++ " " ++ show (m Map.! "b")
   |
14 |     putStrLn show (m Map.! "a") ++ " " ++ show (m Map.! "b")
   |              ^^^^
