tests/transpiler/x/hs/map_literal_dynamic.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
import qualified Data.Map as Map
m = Map.fromList [("a", x), ("b", y)]

x = 3

y = 4

main :: IO ()
main = do
    putStrLn show (m Map.! "a") ++ " " ++ show (m Map.! "b")
